--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -16,9 +16,9 @@
     </style>
 </head>
 <body>
-<h1>Courses</h1>
 <div class="container">
     <form class="form-sigout" method="get" action="/logout">
+        <h2 class="form-signin-heading">Welcome to demo-security application</h2>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Logout</button>
     </form>
 </div>
